// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#makeColumnSearchSelectOptions with groupSlug returns group columns by type 1`] = `
[
  {
    "disabled": false,
    "label": "week_of_started_session_at",
    "optGroupBy": "Group By Columns",
    "type": "timestamp",
    "value": "week_started_session_at_vRGJ_lHs",
  },
  {
    "disabled": false,
    "label": "total_sessions",
    "optGroupBy": "Metric Columns",
    "type": "number",
    "value": "metrics_total_events",
  },
  {
    "disabled": false,
    "label": "total_viewed_course",
    "optGroupBy": "Metric Columns",
    "type": "number",
    "value": "week_metric_total_viewed_course_2ei6FtOF",
  },
  {
    "disabled": false,
    "label": "total_identified_visitor",
    "optGroupBy": "Metric Columns",
    "type": "number",
    "value": "week_metric_total_identified_visitor_hyUcErjq",
  },
  {
    "disabled": false,
    "label": "avg_courses_viewed_per_session",
    "optGroupBy": "Metric Columns",
    "type": "number",
    "value": "metric_append_viewed_course_oo_2_a_7_hn_feature_1_average_slv_jcl_in",
  },
  {
    "disabled": false,
    "label": "total_paid_visits",
    "optGroupBy": "Metric Columns",
    "type": "number",
    "value": "metric_paid_visit_sum_fou_0_x_kn",
  },
  {
    "disabled": false,
    "label": "total_lead_created",
    "optGroupBy": "Metric Columns",
    "type": "number",
    "value": "week_metric_total_lead_created_4RJOm7yo",
  },
  {
    "disabled": false,
    "label": "spend",
    "optGroupBy": "Spend Columns",
    "type": "float",
    "value": "_spend_column_spend",
  },
  {
    "disabled": false,
    "label": "clicks",
    "optGroupBy": "Spend Columns",
    "type": "integer",
    "value": "_spend_column_clicks",
  },
  {
    "disabled": false,
    "label": "impressions",
    "optGroupBy": "Spend Columns",
    "type": "integer",
    "value": "_spend_column_impressions",
  },
  {
    "disabled": false,
    "label": "percent_viewed_course",
    "optGroupBy": "Computed Columns",
    "type": "float",
    "value": "week_computed_conversion_to_viewed_course_2ei6FtOF",
  },
  {
    "disabled": false,
    "label": "percent_identified_visitor",
    "optGroupBy": "Computed Columns",
    "type": "float",
    "value": "week_computed_conversion_to_identified_visitor_hyUcErjq",
  },
  {
    "disabled": false,
    "label": "cost_per_click",
    "optGroupBy": "Computed Columns",
    "type": "float",
    "value": "week_cost_per_click",
  },
  {
    "disabled": false,
    "label": "cost_per_impression",
    "optGroupBy": "Computed Columns",
    "type": "float",
    "value": "week_cost_per_impression",
  },
  {
    "disabled": false,
    "label": "Cost per Session",
    "optGroupBy": "Computed Columns",
    "type": "number",
    "value": "week_cost_per_session",
  },
  {
    "disabled": false,
    "label": "conversion_rate_to_lead_created",
    "optGroupBy": "Computed Columns",
    "type": "float",
    "value": "week_computed_conversion_to_lead_created_4RJOm7yo",
  },
  {
    "disabled": false,
    "label": "Cost per Session Moving Average",
    "optGroupBy": "Computed Columns",
    "type": "number",
    "value": "week_cost_per_session_moving_average",
  },
]
`;

exports[`#makeColumnSearchSelectOptions with no groupSlug returns grouped parent columns by activity 1`] = `
[
  {
    "disabled": false,
    "label": "started_session_at",
    "optGroupBy": "Started Session",
    "type": "timestamp",
    "value": "limiting_started_session_3aQ4ZrGo_ts",
  },
  {
    "disabled": false,
    "label": "customer",
    "optGroupBy": "Started Session",
    "type": "string",
    "value": "limiting_started_session_3aQ4ZrGo_customer",
  },
  {
    "disabled": false,
    "label": "activity",
    "optGroupBy": "Started Session",
    "type": "string",
    "value": "limiting_started_session_3aQ4ZrGo_feature_1",
  },
  {
    "disabled": false,
    "label": "unique_customer_identifier",
    "optGroupBy": "Started Session",
    "type": "string",
    "value": "limiting_started_session_3aQ4ZrGo_join_customer",
  },
  {
    "disabled": false,
    "label": "ad_source",
    "optGroupBy": "Started Session",
    "type": "string",
    "value": "limiting_started_session_3aQ4ZrGo_ad_source",
  },
  {
    "disabled": false,
    "label": "number_of_courses_viewed",
    "optGroupBy": "Aggregate In Between - Viewed Course",
    "type": "integer",
    "value": "append_viewed_course_Oo2A7HN__feature_1",
  },
  {
    "disabled": false,
    "label": "converted_to_viewed_course_at",
    "optGroupBy": "First In Between - Viewed Course",
    "type": "timestamp",
    "value": "conversion_viewed_course_2ei6FtOF_ts",
  },
  {
    "disabled": false,
    "label": "converted_to_viewed_course",
    "optGroupBy": "First In Between - Viewed Course",
    "type": "boolean",
    "value": "converted_to_viewed_course_2ei6FtOF",
  },
  {
    "disabled": false,
    "label": "days_to_viewed_course",
    "optGroupBy": "First In Between - Viewed Course",
    "type": "number",
    "value": "days_to_viewed_course_2ei6FtOF",
  },
  {
    "disabled": false,
    "label": "converted_to_identified_visitor_at",
    "optGroupBy": "First Ever - Identified Visitor",
    "type": "timestamp",
    "value": "conversion_identified_visitor_hyUcErjq_ts",
  },
  {
    "disabled": false,
    "label": "converted_to_identified_visitor",
    "optGroupBy": "First Ever - Identified Visitor",
    "type": "boolean",
    "value": "converted_to_identified_visitor_hyUcErjq",
  },
  {
    "disabled": false,
    "label": "days_to_identified_visitor",
    "optGroupBy": "First Ever - Identified Visitor",
    "type": "number",
    "value": "days_to_identified_visitor_hyUcErjq",
  },
  {
    "disabled": false,
    "label": "converted_to_lead_created_at",
    "optGroupBy": "First In Between - Lead Created",
    "type": "timestamp",
    "value": "conversion_lead_created_4RJOm7yo_ts",
  },
  {
    "disabled": false,
    "label": "converted_to_lead_created",
    "optGroupBy": "First In Between - Lead Created",
    "type": "boolean",
    "value": "converted_to_lead_created_4RJOm7yo",
  },
  {
    "disabled": false,
    "label": "days_to_lead_created",
    "optGroupBy": "First In Between - Lead Created",
    "type": "number",
    "value": "days_to_lead_created_4RJOm7yo",
  },
  {
    "disabled": false,
    "label": "week_of_started_session_at",
    "optGroupBy": "Computed Columns",
    "type": "timestamp",
    "value": "started_session_at_vRGJ_lHs",
  },
  {
    "disabled": false,
    "label": "day_of_started_session_at",
    "optGroupBy": "Computed Columns",
    "type": "timestamp",
    "value": "started_session_at_ZfgCQg7m",
  },
  {
    "disabled": false,
    "label": "paid_visit",
    "optGroupBy": "Computed Columns",
    "type": "integer",
    "value": "paid_visit",
  },
]
`;

exports[`#makeColumnSearchSelectOptions with no groupSlug with columnTypes limitation disabled columns properly 1`] = `
[
  {
    "disabled": true,
    "label": "started_session_at",
    "optGroupBy": "Started Session",
    "type": "timestamp",
    "value": "limiting_started_session_3aQ4ZrGo_ts",
  },
  {
    "disabled": false,
    "label": "customer",
    "optGroupBy": "Started Session",
    "type": "string",
    "value": "limiting_started_session_3aQ4ZrGo_customer",
  },
  {
    "disabled": false,
    "label": "activity",
    "optGroupBy": "Started Session",
    "type": "string",
    "value": "limiting_started_session_3aQ4ZrGo_feature_1",
  },
  {
    "disabled": false,
    "label": "unique_customer_identifier",
    "optGroupBy": "Started Session",
    "type": "string",
    "value": "limiting_started_session_3aQ4ZrGo_join_customer",
  },
  {
    "disabled": false,
    "label": "ad_source",
    "optGroupBy": "Started Session",
    "type": "string",
    "value": "limiting_started_session_3aQ4ZrGo_ad_source",
  },
  {
    "disabled": true,
    "label": "number_of_courses_viewed",
    "optGroupBy": "Aggregate In Between - Viewed Course",
    "type": "integer",
    "value": "append_viewed_course_Oo2A7HN__feature_1",
  },
  {
    "disabled": true,
    "label": "converted_to_viewed_course_at",
    "optGroupBy": "First In Between - Viewed Course",
    "type": "timestamp",
    "value": "conversion_viewed_course_2ei6FtOF_ts",
  },
  {
    "disabled": true,
    "label": "converted_to_viewed_course",
    "optGroupBy": "First In Between - Viewed Course",
    "type": "boolean",
    "value": "converted_to_viewed_course_2ei6FtOF",
  },
  {
    "disabled": true,
    "label": "days_to_viewed_course",
    "optGroupBy": "First In Between - Viewed Course",
    "type": "number",
    "value": "days_to_viewed_course_2ei6FtOF",
  },
  {
    "disabled": true,
    "label": "converted_to_identified_visitor_at",
    "optGroupBy": "First Ever - Identified Visitor",
    "type": "timestamp",
    "value": "conversion_identified_visitor_hyUcErjq_ts",
  },
  {
    "disabled": true,
    "label": "converted_to_identified_visitor",
    "optGroupBy": "First Ever - Identified Visitor",
    "type": "boolean",
    "value": "converted_to_identified_visitor_hyUcErjq",
  },
  {
    "disabled": true,
    "label": "days_to_identified_visitor",
    "optGroupBy": "First Ever - Identified Visitor",
    "type": "number",
    "value": "days_to_identified_visitor_hyUcErjq",
  },
  {
    "disabled": true,
    "label": "converted_to_lead_created_at",
    "optGroupBy": "First In Between - Lead Created",
    "type": "timestamp",
    "value": "conversion_lead_created_4RJOm7yo_ts",
  },
  {
    "disabled": true,
    "label": "converted_to_lead_created",
    "optGroupBy": "First In Between - Lead Created",
    "type": "boolean",
    "value": "converted_to_lead_created_4RJOm7yo",
  },
  {
    "disabled": true,
    "label": "days_to_lead_created",
    "optGroupBy": "First In Between - Lead Created",
    "type": "number",
    "value": "days_to_lead_created_4RJOm7yo",
  },
  {
    "disabled": true,
    "label": "week_of_started_session_at",
    "optGroupBy": "Computed Columns",
    "type": "timestamp",
    "value": "started_session_at_vRGJ_lHs",
  },
  {
    "disabled": true,
    "label": "day_of_started_session_at",
    "optGroupBy": "Computed Columns",
    "type": "timestamp",
    "value": "started_session_at_ZfgCQg7m",
  },
  {
    "disabled": true,
    "label": "paid_visit",
    "optGroupBy": "Computed Columns",
    "type": "integer",
    "value": "paid_visit",
  },
]
`;

exports[`#makeColumnSearchSelectOptions with no groupSlug with omitColumnIds limitation disabled columns properly 1`] = `
[
  {
    "disabled": true,
    "label": "started_session_at",
    "optGroupBy": "Started Session",
    "type": "timestamp",
    "value": "limiting_started_session_3aQ4ZrGo_ts",
  },
  {
    "disabled": false,
    "label": "customer",
    "optGroupBy": "Started Session",
    "type": "string",
    "value": "limiting_started_session_3aQ4ZrGo_customer",
  },
  {
    "disabled": false,
    "label": "activity",
    "optGroupBy": "Started Session",
    "type": "string",
    "value": "limiting_started_session_3aQ4ZrGo_feature_1",
  },
  {
    "disabled": false,
    "label": "unique_customer_identifier",
    "optGroupBy": "Started Session",
    "type": "string",
    "value": "limiting_started_session_3aQ4ZrGo_join_customer",
  },
  {
    "disabled": false,
    "label": "ad_source",
    "optGroupBy": "Started Session",
    "type": "string",
    "value": "limiting_started_session_3aQ4ZrGo_ad_source",
  },
  {
    "disabled": false,
    "label": "number_of_courses_viewed",
    "optGroupBy": "Aggregate In Between - Viewed Course",
    "type": "integer",
    "value": "append_viewed_course_Oo2A7HN__feature_1",
  },
  {
    "disabled": false,
    "label": "converted_to_viewed_course_at",
    "optGroupBy": "First In Between - Viewed Course",
    "type": "timestamp",
    "value": "conversion_viewed_course_2ei6FtOF_ts",
  },
  {
    "disabled": false,
    "label": "converted_to_viewed_course",
    "optGroupBy": "First In Between - Viewed Course",
    "type": "boolean",
    "value": "converted_to_viewed_course_2ei6FtOF",
  },
  {
    "disabled": false,
    "label": "days_to_viewed_course",
    "optGroupBy": "First In Between - Viewed Course",
    "type": "number",
    "value": "days_to_viewed_course_2ei6FtOF",
  },
  {
    "disabled": false,
    "label": "converted_to_identified_visitor_at",
    "optGroupBy": "First Ever - Identified Visitor",
    "type": "timestamp",
    "value": "conversion_identified_visitor_hyUcErjq_ts",
  },
  {
    "disabled": false,
    "label": "converted_to_identified_visitor",
    "optGroupBy": "First Ever - Identified Visitor",
    "type": "boolean",
    "value": "converted_to_identified_visitor_hyUcErjq",
  },
  {
    "disabled": false,
    "label": "days_to_identified_visitor",
    "optGroupBy": "First Ever - Identified Visitor",
    "type": "number",
    "value": "days_to_identified_visitor_hyUcErjq",
  },
  {
    "disabled": false,
    "label": "converted_to_lead_created_at",
    "optGroupBy": "First In Between - Lead Created",
    "type": "timestamp",
    "value": "conversion_lead_created_4RJOm7yo_ts",
  },
  {
    "disabled": false,
    "label": "converted_to_lead_created",
    "optGroupBy": "First In Between - Lead Created",
    "type": "boolean",
    "value": "converted_to_lead_created_4RJOm7yo",
  },
  {
    "disabled": false,
    "label": "days_to_lead_created",
    "optGroupBy": "First In Between - Lead Created",
    "type": "number",
    "value": "days_to_lead_created_4RJOm7yo",
  },
  {
    "disabled": false,
    "label": "week_of_started_session_at",
    "optGroupBy": "Computed Columns",
    "type": "timestamp",
    "value": "started_session_at_vRGJ_lHs",
  },
  {
    "disabled": false,
    "label": "day_of_started_session_at",
    "optGroupBy": "Computed Columns",
    "type": "timestamp",
    "value": "started_session_at_ZfgCQg7m",
  },
  {
    "disabled": false,
    "label": "paid_visit",
    "optGroupBy": "Computed Columns",
    "type": "integer",
    "value": "paid_visit",
  },
]
`;
